--- a/templates/edit-userprofile.html
+++ b/templates/edit-userprofile.html
@@ -26,7 +26,7 @@
           </div>
           <div class="col-md-12">
             <div class="page-header-title">
-              <h2 class="mb-0">Caretakers</h2>
+              <h2 class="mb-0">User Profile</h2>
             </div>
           </div>
         </div>
