--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -181,7 +181,7 @@
         </ul>
         <div class="tab-content" id="mysrpTabContent">
           <div class="tab-pane fade show active" id="drp-tab-1" role="tabpanel" aria-labelledby="drp-t1" tabindex="0">
-            <a href="#!" class="dropdown-item">
+            <a href="{{ url_for('edit_profile') }}" class="dropdown-item">
               <i class="ti ti-edit-circle"></i>
               <span>Edit Profile</span>
             </a>
